--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,6 @@ cython_debug/
 
 # Migrations are intentionally not included right now.
 migrations
+
+# Generating the OpenAPI file
+api-spec.yaml
