Added initial migrations, Dockerfile & compose.

--- a/.gitignore
+++ b/.gitignore
@@ -161,9 +161,9 @@ cython_debug/
 
 
 # Migrations are intentionally not included right now.
-migrations
 
 # Generating the OpenAPI file and client
 api-spec.yaml
 client
-OSCR_django/uploads
+uploads
+data
