Fixed map detection

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
 
+    # This controls the maximum combat log upload size.
+    client_max_body_size 20M;
+
     location /static {
         include  /etc/nginx/mime.types;
         alias /opt/data/static;
