--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Django==4.2.9
 djangorestframework==3.14.0
 drf_yasg==1.21.7
 django_filter==23.5
-STO-OSCR==0.0.4
+STO-OSCR==2024.2b112
 whitenoise==6.6.0
