--- a/.github/workflows/swagger.yaml
+++ b/.github/workflows/swagger.yaml
@@ -18,6 +18,7 @@ jobs:
         python-version: "3.10"
 
     - run: pip install -r requirements.txt
+    - run: python3 OSCR_django/manage.py migrate
     - run: python3 OSCR_django/manage.py generate_swagger -f yaml -u http://127.0.0.1 dist/OSCR_django.yaml
     - uses: actions/upload-artifact@v2
       with:
