--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
             "src": "deploy.sh",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "staticfiles"
+                "distDir": "OSCR_django/staticfiles"
             }
         }
     ],
