--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Django==4.2.9
 djangorestframework==3.14.0
 drf_yasg==1.21.7
 django_filter==23.5
-STO-OSCR==2024.2b201
+STO-OSCR>=2024.2b201
 whitenoise==6.6.0
 psycopg[binary,pool]==3.1.18
