--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
-  - repo: http://gitlab.eng.cspi.com:8888/3rdParty-Repositories/black.git
+  - repo: https://github.com/psf/black.git
     rev: 22.3.0
     hooks:
       - id: black
-  - repo: http://gitlab.eng.cspi.com:8888/3rdParty-Repositories/flake8.git
+  - repo: https://github.com/PyCQA/flake8.git
     rev: 6.1.0
     hooks:
       - id: flake8
-  - repo: http://gitlab.eng.cspi.com:8888/3rdParty-Repositories/isort.git
+  - repo: https://github.com/PyCQA/isort.git
     rev: 5.12.0
     hooks:
       - id: isort
