--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django_filter==23.5
 STO-OSCR>=2024.3b162
 whitenoise==6.6.0
 psycopg[binary,pool]==3.1.18
-vercel_storage>=0.0.1
+mysqlclient==2.2.4
 requests>=2.31.0
 
 # urllib3 needs to be pinned as newer versions don't work on vercel.
