--- a/.github/workflows/swagger.yaml
+++ b/.github/workflows/swagger.yaml
@@ -18,6 +18,7 @@ jobs:
         python-version: "3.10"
 
     - run: pip install -r requirements.txt
+    - run: mkdir -p sqlite3
     - run: ENABLE_DEBUG=yes python3 manage.py migrate
     - run: mkdir -p dist
     - run: ENABLE_DEBUG=yes python3 manage.py generate_swagger -f yaml -u http://127.0.0.1 dist/OSCR_django.yaml
