--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ whitenoise==6.6.0
 psycopg[binary,pool]==3.1.18
 mysqlclient==2.2.4
 requests>=2.31.0
+django-json-widget>=2.0.1
 
 # urllib3 needs to be pinned as newer versions don't work on vercel.
 # https://stackoverflow.com/questions/76187256/importerror-urllib3-v2-0-only-supports-openssl-1-1-1-currently-the-ssl-modu
