--- a/ruff.toml
+++ b/ruff.toml
@@ -31,6 +31,7 @@ exclude = [
 # Same as Black.
 line-length = 88
 indent-width = 4
+fix = true
 
 # Assume Python 3.8
 target-version = "py38"
@@ -49,6 +50,9 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # isort like functionality
 extend-select = ["I"]
+
+[lint.isort]
+combine-as-imports = true
 
 [format]
 # Like Black, use double quotes for strings.
