--- a/.github/workflows/swagger.yaml
+++ b/.github/workflows/swagger.yaml
@@ -1,6 +1,9 @@
 name: Generate Artifacts
 
-on: push
+on:
+  release:
+    types:
+      - published
 
 jobs:
   build_binary:
@@ -12,29 +15,29 @@ jobs:
         os: [ubuntu-latest]
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: "3.10"
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.13"
 
-    - run: pip install -r requirements.txt
-    - run: mkdir -p sqlite3
-    - run: ENABLE_DEBUG=yes python3 manage.py migrate
-    - run: mkdir -p dist
-    - run: ENABLE_DEBUG=yes python3 manage.py generate_swagger -f yaml -u http://127.0.0.1 dist/OSCR_django.yaml
-    - uses: actions/upload-artifact@v2
-      with:
-        name: build_binary
-        path: dist/*
+      - run: python3 -m pip install build
+      - run: python3 -m build client
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build_binary
+          path: client/dist
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: [ build_binary ]
+    needs: [build_binary]
     name: Create release
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/OSCR-django-client
     permissions:
       contents: write
-
+      id-token: write
     steps:
       - name: Download
         uses: actions/download-artifact@v3
@@ -45,3 +48,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: dist/*
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
