--- a/.github/workflows/swagger.yaml
+++ b/.github/workflows/swagger.yaml
@@ -47,6 +47,8 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
+          generateReleaseNotes: true
+          allowUpdates: true
           artifacts: dist/*
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
